--- a/flaskBlog/templates/layout.html
+++ b/flaskBlog/templates/layout.html
@@ -21,11 +21,18 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+          <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="{{url_for('about')}}">About</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{url_for('register')}}">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{url_for('login')}}">Login</a>
+        </li>
+
 
       </ul>
     </div>
