--- a/flaskBlog/templates/index.html
+++ b/flaskBlog/templates/index.html
@@ -2,10 +2,22 @@
 
 {% block content %}
 
+<div class = "mx-auto" style="width:80%">
 {% for post in posts %}
-<h3>{{post.title}}</h3>
-<p>{{post.Description}}</p>
-{% endfor %}
+    <div class="card mt-2">
+        <small class="ml-3 mt-2">
+            By {{post.author.username}} on {{post.date_posted.strftime('%d-%m-%Y')}}
+        </small>
+        <hr>
+        <div class="card-body">
+            <h5 class = 'card-title'>{{post.title}}</h5>
+            <p class="card-text"> {{post.description}}</p>
+
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
 
 
 {% endblock %}
