--- a/flaskBlog/templates/create_post.html
+++ b/flaskBlog/templates/create_post.html
@@ -3,7 +3,7 @@
 
 <form action="" method="post" style="width: 60%" class ="mx-auto">
     {{form.hidden_tag()}}
-    <h3 class ="text-center">Add Post</h3>
+    <h3 class ="text-center">{{heading}}</h3>
 
     <div class ='form-group'>
         {{form.title.label}}
