--- a/flaskBlog/templates/get_post.html
+++ b/flaskBlog/templates/get_post.html
@@ -9,6 +9,14 @@
             By {{post.author.username}} on {{post.date_posted.strftime('%d-%m-%Y')}}
         </small>
         <hr>
+      <div class ="card-body">
+        {% if current_user == post.author %}
+        <div class = "ml-3 mb-2 float-right">
+          <a href = "{{url_for('update_post',post_id=post.id)}}" class ="btn btn-secondary btn-sm">Update</a>
+          <a href = "{{url_for('delete_post',post_id=post.id)}}" class ="btn btn-danger btn-sm">Delete</a>
+        </div>
+        {% endif %}
+      </div>
         <div class="card-body">
             <h5 class = 'card-title'>{{post.title}}</h5>
             <p class="card-text"> {{post.description}}</p>
