--- a/flaskBlog/templates/layout.html
+++ b/flaskBlog/templates/layout.html
@@ -29,6 +29,9 @@
 
         {% if current_user.is_authenticated %}
          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{url_for('create_post')}}">Add Post</a>
+        </li>
+         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{url_for('logout')}}">Logout</a>
         </li>
         {% else %}
